--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -17,6 +17,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
+        <CheckBox
+            android:id="@+id/dark_mode_check"
+            android:text="Dark Mode"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
     </LinearLayout>
 
     <androidx.compose.ui.platform.ComposeView
