--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -3,32 +3,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:weightSum="2">
+    android:padding="16dp">
 
-    <LinearLayout
-        android:id="@+id/xml"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:orientation="vertical">
-
-        <TextView
-            android:id="@+id/greetings"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-
-        <CheckBox
-            android:id="@+id/dark_mode_check"
-            android:text="Dark Mode"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-
-    </LinearLayout>
-
-    <androidx.compose.ui.platform.ComposeView
-        android:id="@+id/compose"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1" />
+    <CheckBox
+        android:id="@+id/alternative_icon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Enable Alternative Icon" />
 
 </LinearLayout>
